Fix align-items property

--- a/client/my-sites/activity/activity-log-item/style.scss
+++ b/client/my-sites/activity/activity-log-item/style.scss
@@ -60,7 +60,7 @@
 .activity-log-item__type {
 	display: flex;
 	flex-direction: column;
-	align-content: center;
+	align-items: center;
 	align-self: flex-start;
 	margin: 1px 22px 0 10px;
 	padding: 4px 0 6px;
